Task5/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloapp
  name: helloapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloapp
  template:
    metadata:
      labels:
        app: helloapp
    spec:
      containers:
      - name: hello
        image: wiredcraft/hello:latest
        ports:
          - name: http
            containerPort: 9090
            protocol: TCP
        resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
        volumeMounts:
          - name: api-config
            mountPath: /root/config.yaml
            readOnly: true
      - name: redis
          image: redis:5.0.8
          command:
            - "sh"
            - "-c"
            - "redis-server /usr/local/etc/redis/redis.conf"
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 1000m
              memory: 1024Mi
          volumeMounts:
            - name: data
              mountPath: /data
            - name: redis-config
              mountPath: /usr/local/etc/redis/redis.conf
              subPath: redis.conf
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: redis-pvc
        - name: redis-config
          configMap:
            name: redis-config
        - name: hello-api-config
          secret:
            secretName: hello-api-secret
            optional: true
