Task5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloapp-svc
  labels:
    app: helloapp-svc
spec:
  selector:
    app:  helloapp
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 9090
  type: NodePort
