Task5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: helloapp
  rules:
  - http:
      paths:
      - path: /welcome
        pathType: Prefix
        backend:
          service:
            name: helloapp-svc
            port:
              number: 80
